package com.qiding.design;

public interface Command {
    public void execute();
}
