package com.qiding.design;

public class ReceiverA {
    public void methodA(){
        System.out.println("A method");
    }
}
