package com.qiding.design;

public class ReceiverB {
    public void methodB(){
        System.out.println("method B");
    }
}
